# LectureLab

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  render.yaml  requirements-app.txt  requirements-ci.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  provenance.yml  scorecard.yml  secret-scan.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: features_planetary_motion.parquet
docs/: README.md  bibliography.md
docs/celestial/: feynman_elementary.md  feynman_formal.md
docs/physics/: acoustic_scattering.md  active_matter.md  gray_scott.md
docs/statistics/: anova.md  effect_sizes.md  posthoc_assumptions.md
notebooks/: feynman_lost_lecture.ipynb
scripts/: build_feynman_notebook.py
src/: dataset_catalog.py  extract_features.py  orbit_feynman.py
tests/: test_dataset_catalog.py  test_orbit_feynman.py  test_stats.py
